First milestone of project 4 for parallels and complang

--- a/complang_cs_3304/sftp-config.json
+++ b/complang_cs_3304/sftp-config.json
@@ -16,7 +16,8 @@
     
     "host": "rlogin.cs.vt.edu",
     "user": "elmer",
-    "password": "zse45THjkl",
+    // "password": "zse45THjkl",
+    "password": ",7E/=v4%46+6Nqq6c@9;d[i9*kzd9L}7",
     //"port": "22",
     
     "remote_path": "/home/ugrads/e/elmer/cs_3304",
