--- a/parallel_cs_4234/projects/p1/q1/Makefile
+++ b/parallel_cs_4234/projects/p1/q1/Makefile
@@ -20,22 +20,22 @@ q1b: q1b.c
 
 run1a_b:
 	@echo ", Broadcast 4"
-	mpirun -np 4 -npernode 1 -hostfile ../nodes ./q1a_b
+	mpirun -np 4 -map-by ppr:1:node -hostfile ../nodes ./q1a_b
 	@echo ", Broadcast 8"
-	mpirun -np 8 -npernode 1 -hostfile ../nodes ./q1a_b
+	mpirun -np 8 -map-by ppr:1:node -hostfile ../nodes ./q1a_b
 	@echo ", Broadcast  16"
-	mpirun -np 16 -npernode 1 -hostfile ../nodes ./q1a_b
+	mpirun -np 16 -map-by ppr:1:node -hostfile ../nodes ./q1a_b
 
 run1a_sr:
 	@echo ", SendRecv  4"
-	mpirun -np 4 -npernode 1 -hostfile ../nodes ./q1a_sr
+	mpirun -np 4 -map-by ppr:1:node -hostfile ../nodes ./q1a_sr
 	@echo ", SendRecv  8"
-	mpirun -np 8 -npernode 1 -hostfile ../nodes ./q1a_sr
+	mpirun -np 8 -map-by ppr:1:node -hostfile ../nodes ./q1a_sr
 	@echo ", SendRecv  16"
-	mpirun -np 16 -npernode 1 -hostfile ../nodes ./q1a_sr
+	mpirun -np 16 -map-by ppr:1:node -hostfile ../nodes ./q1a_sr
 
 run1b:
 	@echo ", inter-node,"
-	mpirun -np 4 -npernode 1 -hostfile ../nodes ./q1b
+	mpirun -np 4 -map-by ppr:1:node -hostfile ../nodes ./q1b
 	@echo ", intra-node,"
-	mpirun -np 4 -npernode 4 -hostfile ../nodes ./q1b
+	mpirun -np 4 -map-by ppr:4:node -hostfile ../nodes ./q1b
